# learn-haskell.hsproj

./: .gitignore  ADT.hs  Book.hs  Collection.hs  EitherSample.hs  FileLinesCount.hs  Flow.hs  HaskellFairyLand.hs  IOSample.hs  Learnhaskell.hs  Love.hs  MTPC.hs  Main.hs  MyFunction.hs  MyMonad.hs  Nat.hs  Option.hs  README.md  Rock.hs  TrySample.hs  TypeClass.hs  _ADT.hsplay  _Book.hsplay  _Collection.hsplay  _EitherSample.hsplay  _FileLinesCount.hsplay  _Flow.hsplay  _HaskellFairyLand.hsplay  _Learn_haskell.hsplay  _Love.hsplay  _MTPC.hsplay  _MyFunction.hsplay  _MyMonad.hsplay  _Nat.hsplay  _Option.hsplay  _Rock.hsplay  _TrySample.hsplay  learnhaskell.cabal  main
