name: learnhaskell
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable learnhaskell
  main-is: Learn_haskell.hs
  buildable: True
  build-depends:
      base -any,
      directory -any
  other-modules:
      Love
      Collection
      MyFunction
      EitherSample
      FileLinesCount
      IOSample
      Option
      HaskellFairyLand
      Flow
      Nat
      Book
      MyMonad
      Learnhaskell
      Main
      TypeClass
      ADT
      Rock
